# gps

./: .spyderproject  Installation notes  Installation notes~  README.md  gps.geany  readme.txt
experiments/mjc_badmm_example/: hyperparams.py  hyperparams.py~
experiments/pr2_example/: hyperparams.py
experiments/yumi_example/: hyperparams.py
experiments/yumi_exp/: hyperparams.py
experiments/yumi_rect_peg/: hyperparams.py
mjc_models/: yumi_mjcf_rl.xml  yumi_mjcf_rl_peg.xml  yumi_right_peg_mjcf.xml  yumi_right_rect_peg_mjcf.xml
python/gps/: gps_main.py  plot_cost_shape.py  plot_exp.py
python/gps/agent/: config.py
python/gps/agent/mjc/: agent_mjc.py
python/gps/agent/ros/: agent_ros.py  ros_utils.py
python/gps/algorithm/cost/: config.py
python/gps/algorithm/dynamics/: dynamics_lr.py  dynamics_prior_gmm.py
python/gps/algorithm/policy/: lin_gauss_init.py
python/gps/gui/: config.py  gps_training_gui.py  plotter_2d.py
python/gps/sample/: sample_list.py
python/gps/utility/: gmm.py
src/gps_agent_pkg/: CMakeLists.txt  controller_plugins.xml  manifest.xml
src/gps_agent_pkg/catkin_generated/: generate_cached_setup.py  setup_cached.sh
src/gps_agent_pkg/devel/: .catkin  .rosinstall  setup.sh
src/gps_agent_pkg/include/gps_agent_pkg/: encodersensor.h  kdlchain.h  lingausscontroller.h  positioncontroller.h  robotplugin.h  yumiplugin.h
src/gps_agent_pkg/launch/: pr2_gazebo_no_controller.launch  yumi_gps.launch  yumi_left_controller.yaml.bak  yumi_only_controller.launch
src/gps_agent_pkg/src/: encodersensor.cpp  kdlchain.cpp  lingausscontroller.cpp  positioncontroller.cpp  pr2plugin.cpp  robotplugin.cpp  rostopicsensor.cpp  trialcontroller.cpp  yumiplugin.cpp
yumi_model/: irb14000_vc.xml  irb14000_vv.xml  irb14000_vv_dyn.xml  irb14000_vv_left_model_learning.xml  yumi_ABB_left.urdf  yumi_ABB_right.urdf  yumi_both_nik_traj_opt.urdf  yumi_right_nik_traj_opt.urdf
yumi_mujoco_model/: yumi_mjcf_rl_peg.xml
